tests/should_fail/match_double_wildcard2.nv
// should_fail: duplicate wildcard/default in match
module match_double_wildcard

fn check(n: Int) -> String {
    return match n {
        0 => "zero",
        _ => "a",
        _ => "b"
    }
}
